--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moviment Graffitti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="assets/fonts/styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/fonts/styles/style.css">
 </head>
 <body>
  <!-- Navibar -->
   <nav class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
       <a class="navbar-brand img" href="#">
-        <img src="./assets/logo.png">
+        <img src="../movimentgrafitti-redesign/assets/images/logo.png">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,12 +48,12 @@
   </nav>
 
   <!-- hero -->
-  <section id="hero">
+  <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>This is our latest action</h1>
-          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+          <h1 class="text-uppercase text-white fw-bold display-1">This is our latest action</h1>
+          <h5 class="text-white mt-3 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
           <div>
             <a href="#" class="btn btn-imp">Learn More</a>
           </div>
@@ -63,6 +64,43 @@
 
 
 
+  </section>
+
+  <!-- our mission -->
+  <section id="ourmission" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title">
+            <h1 class="display-4 fw-bold text-center">Our Mission</h1>
+            <div class="line"></div>
+          </div>
+        </div>
+        <div class="row">
+        <div class="col-lg-6">
+          <img src="../movimentgrafitti-redesign/assets/images/mission.jpg" alt="">
+        </div>
+        <div class="col-lg-5">
+        <h1>About our work</h1>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div>
+          <div class="iconbox">
+            <i class="ri-open-arm-fill"></i>
+          </div>
+          <div>
+            <h4>Lorem ipsum dolor sit.</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
+        </div>
+          <div>
+            <button type="button" class="btn btn-dark">Learn more</button>
+          </div>
+        </div>
+        </div>  
+        
+      </div>
+      </div>
+
+    </div>
   </section>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
