added our mission to homepage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </nav>
 
   <!-- hero -->
-  <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
+  <section id="hero" class="min-vh-100 d-flex pt-4 mb-3 align-items-center text-center">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -76,24 +76,39 @@
             <div class="line"></div>
           </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-between align-items-center">
         <div class="col-lg-6">
-          <img src="../movimentgrafitti-redesign/assets/images/mission.jpg" alt="">
+          <img src="../movimentgrafitti-redesign/assets/images/sam-ladley-2hM5_1i2k3U-unsplash.jpg" alt="">
         </div>
         <div class="col-lg-5">
         <h1>About our work</h1>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div>
-          <div class="iconbox">
+        <div class="d-flex pt-4 mb-3">
+          <div class="iconbox me-4">
+            <i class="ri-door-open-fill"></i>
+          </div>
+          <div>
+            <h4 class="mt-3">Lorem ipsum dolor sit.</h4>
+            <p class="mt-3 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
+        </div>
+        </div>
+        <div class="d-flex pt-4 mb-3 pt-4 mb-3">
+          <div class="iconbox me-4">
+            <i class="ri-rocket-2-fill"></i>
+          </div>
+          <div>
+            <h4 class="mt-3">Lorem ipsum dolor sit.</h4>
+            <p class="mt-3 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
+        </div>
+        </div>
+        <div class="d-flex pt-4 mb-3">
+          <div class="iconbox me-4">
             <i class="ri-open-arm-fill"></i>
           </div>
           <div>
-            <h4>Lorem ipsum dolor sit.</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
+            <h4 class="mt-3">Lorem ipsum dolor sit.</h4>
+            <p class="mt-3 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
         </div>
-          <div>
-            <button type="button" class="btn btn-dark">Learn more</button>
-          </div>
         </div>
         </div>  
         
