--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </nav>
 
   <!-- hero -->
-  <section id="hero" class="min-vh-100 d-flex pt-4 mb-3 align-items-center text-center">
+  <section id="hero" class="min-vh-100 d-flex pt-4 mb-3 align-items-center text-center" style="background-image: url(../movimentgrafitti-redesign/assets/images/enough.jpg);" >
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -81,9 +81,9 @@
           <img src="../movimentgrafitti-redesign/assets/images/sam-ladley-2hM5_1i2k3U-unsplash.jpg" alt="">
         </div>
         <div class="col-lg-5">
-        <h1>About our work</h1>
+        <h1 class="mt-3">About our work</h1>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="d-flex pt-4 mb-3">
+        <div class="d-flex pt-3 mb-3">
           <div class="iconbox me-4">
             <i class="ri-door-open-fill"></i>
           </div>
@@ -92,7 +92,7 @@
             <p class="mt-3 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
         </div>
         </div>
-        <div class="d-flex pt-4 mb-3 pt-4 mb-3">
+        <div class="d-flex pt-3 mb-3 pt-4 mb-3">
           <div class="iconbox me-4">
             <i class="ri-rocket-2-fill"></i>
           </div>
@@ -101,7 +101,7 @@
             <p class="mt-3 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt aspernatur quo obcaecati odit.</p>
         </div>
         </div>
-        <div class="d-flex pt-4 mb-3">
+        <div class="d-flex pt-3 mb-3">
           <div class="iconbox me-4">
             <i class="ri-open-arm-fill"></i>
           </div>
@@ -116,6 +116,74 @@
       </div>
 
     </div>
+  </section>
+
+<!-- our actions -->
+  <section id="ouractions" class="section-padding">
+    <div class="container align-items-top">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title">
+            <h1 class="display-4 fw-bold text-center">Our Actions</h1>
+            <div class="line"></div>
+            <div class="row align-items-center">
+            <div class="col-md-8">
+               <div class="card-overlay">
+                <div class="card text-bg-dark align-items-left text-left oeverlay">
+                  <img src="../movimentgrafitti-redesign/assets/images/gardening.jpg" class="card-img overlays" alt="...">
+                  <div class="card-img-overlay align-items-center">
+                    <h3 class="card-title ms-4 pt-lg-5 mt-3 me-5 display-2 fw-bold text-white text-uppercase">Lorem ipsum dolor sit.</h3>
+                    <p class="card-text ms-3 mt-3 text-white">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <button class="btn btn-imp ms-3 mt-3">Read more</button>
+                  </div>
+                </div>
+              </div> 
+            </div>
+            <div class="col-lg-4">
+                <div class="card">
+                  <div class="card-body">
+                    <h3>Card title</h3>
+                    <p>This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <button class="btn btn-dark">Read more</button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h3>Card title</h3>
+                    <p>This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <button class="btn btn-dark">Read more</button>
+                  </div>
+                </div>
+            </div>
+            </div>
+          </div>
+  </section>
+
+  <!-- events -->
+  <section id="events" class="section-padding">
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+      </button>
+    </div>
+
+
   </section>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
