--- a/index.html
+++ b/index.html
@@ -164,22 +164,37 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="../movimentgrafitti-redesign/assets/images/volunteer-gcc5a6ace0_1920.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption justify-content-between align-items-center text-center">
+            <h3 class="text-white text-uppercase" style="font-size: 80px;">First slide label</h3>
+            <h5 class="text-white">Some representative placeholder content for the first slide.</h5>
+            <button class="btn btn-dark">Read more</button>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="../movimentgrafitti-redesign/assets/images/feminists-gf04fdf81f_1920.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption justify-content-between align-items-center text-center">
+            <h3 class="text-white text-uppercase" style="font-size: 80px;">First slide label</h3>
+            <h5 class="text-white">Some representative placeholder content for the first slide.</h5>
+            <button class="btn btn-dark">Read more</button>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="../movimentgrafitti-redesign/assets/images/protest-g0ae852213_1920.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption justify-content-between align-items-center text-center">
+            <h3 class="text-white text-uppercase" style="font-size: 80px;">First slide label</h3>
+            <h5 class="text-white">Some representative placeholder content for the first slide.</h5>
+            <button class="btn btn-dark">Read more</button>
+          </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
+        <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
+        <span class="visually-hidden">Next</span>
       </button>
     </div>
 
