--- a/index.html
+++ b/index.html
@@ -201,6 +201,100 @@
 
   </section>
 
+  <!-- join us -->
+  <section id="joinus" class="section-padding">
+    <div class="container align-items-top pt-lg-5 pb-lg-5">
+      <div class="row">
+        <div class="col-lg-7 align-items-left">
+          <h2 style="font-size: 60px;">Join us!</h2>
+          <div class="line"></div>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, ut. Omnis nostrum, commodi cupiditate voluptatum fuga ratione! Et, pariatur rem?</h4>
+        </div>
+        <div class="col-lg-4 align-items-center">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae ipsa pariatur quasi harum at eligendi odio, nesciunt dignissimos praesentium voluptatem provident aliquid tenetur sequi mollitia eveniet qui, quis numquam id ex corrupti. Quasi, distinctio. Minus asperiores officiis nesciunt similique laboriosam!</p>
+          <button class="btn btn-imp">Join us</button>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+ <!-- footer -->
+ <footer class="bg-dark">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row gy-5">
+          <div class="col-lg-3 col-sm-6">
+            <a href="#"><img src="../movimentgrafitti-redesign/assets/images/logo-light.png" alt="" style="width: 120px;"></a>
+            <div class="line"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet incidunt ipsum laudantium blanditiis, veniam voluptas.</p>
+              <div class="social-icons">
+                <a href=""><i class="ri-twitter-fill"></i></a>
+                <a href=""><i class="ri-facebook-fill"></i></a>
+                <a href=""><i class="ri-instagram-fill"></i></a>
+                <a href=""><i class="ri-linkedin-fill"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <h5 class="mb-0 text-white fw-bold">REPORTS</h5>
+            <div class="line"></div>
+            <ul>
+              <li><a href="#">Terms and Conditions</a></li>
+              <li><a href="#">Cookies Policy</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Imprint</a></li>
+              <li><a href="#">Annual Report</a></li>
+            </ul>
+            </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <h5 class="mb-0 text-white fw-bold">CONTACT</h5>
+            <div class="line"></div>
+            <ul>
+              <li>Email: info@movimentgraffitti.org</li>
+              <li>Tel: +356 0000000</li>
+              <li>Address: 20, Triq il-Liberta, Malta</li>
+            </div>
+          </div>
+
+            <div class="col-lg-3 col-sm-6">
+          <form class="mb-0 text-white">
+            <div>
+              <h4>Subsribe to our newsletter!</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur autem quam pariatur officia esse non.</p>
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <button type="submit" class="btn btn-imp">Subscribe</button>
+          </form>
+            </div>
+          
+
+        </div>
+
+      </div>
+
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row g-4 justify-content-between">
+          <div class="col-auto">
+            <p class="mb-0">Copyright Moviment Graffitti. All Rights Reserved</p>
+          </div>
+          <div class="col-auto">
+            <p class="mb-0">Designed by <a href="#">Carla Polizzi</a></p>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+ </footer>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
