added contact section
not done yet

--- a/index.html
+++ b/index.html
@@ -221,6 +221,49 @@
 
   </section>
 
+  <!-- contact -->
+  <section class="section-padding bg-dark" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <div class="section-title">
+            <h1 class="display-4 text-white fw-bold">Contact Us</h1>
+            <div class="line bg-white"></div>
+            <p class="text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque est molestiae quos veritatis cum qui.</p>
+
+
+          </div>
+
+        </div>
+
+      </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-8"></div>
+          <form action="#" class="row g-3">
+          <div class="form-group col-lg-6">
+            <input type="text" class="form-control" placeholder="Enter first name">
+          </div>
+          <div class="form-group col-lg-6">
+            <input type="text" class="form-control" placeholder="Enter last name">
+          </div>
+          <div class="form-group col-lg-12">
+            <input type="email" class="form-control" placeholder="Enter e-mail address">
+          </div>
+          <div class="form-group col-lg-12">
+            <input type="text" class="form-control" placeholder="Enter subject">
+          </div>
+          <div class="form-group col-lg-12">
+            <textarea name="message" id="" cols="30" rows="5" class="form-control" placeholder="Enter message"></textarea>
+          </div>
+          <div class="form-group col-lg-12 d-grid">
+            <button class="btn btn-imp">Send Message</button>
+          </div>
+        </form>
+        </div>
+    </div>
+
+  </section>
+
  <!-- footer -->
  <footer class="bg-dark">
     <div class="footer-top">
