--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     </div>
   </nav>
 
-  <!-- hero -->
+  <!-- hero js -->
   <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-uppercase text-white fw-bold display-1">Most recent story and or news</h1>
-          <h5 class="text-white mt-3 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+          <h1 data-aos="fade-left" class="text-uppercase text-white fw-bold display-1">Most recent story and or news</h1>
+          <h5 class="text-white mt-3 mb-4" data-aos="fade-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
           <div>
-            <a href="#" class="btn btn-imp">Learn More</a>
+            <a href="#" class="btn btn-imp" data-aos="fade-up">Learn More</a>
           </div>
         </div>
       </div>
@@ -67,21 +67,21 @@
 
   </section>
 
-  <!-- our mission -->
+  <!-- our mission js-->
   <section id="ourmission" class="section-padding">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
           <div class="section-title">
-            <h1 class="display-4 fw-bold text-center">Our Mission</h1>
+            <h1 class="display-4 fw-bold">Our Mission</h1>
             <div class="line"></div>
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
-        <div class="col-lg-6">
+        <div class="col-lg-6" data-aos="fade-left" data-aos-delay="50">
           <img src="./assets/images/sam-ladley-2hM5_1i2k3U-unsplash.jpg" alt="">
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5" data-aos="fade-left" data-aos-delay="150">
         <h1 class="mt-3">About our work</h1>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="d-flex pt-3 mb-3">
@@ -122,11 +122,11 @@
     </div>
   </section>
 
-  <!-- our actions-->
+  <!-- our actions js-->
 <section id="ouractions" class="section-padding">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center">
+      <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
         <div class="section-title">
           <h1 class="display-4 fw-bold text-center">Our Actions</h1>
           <div class="line"></div>
@@ -135,7 +135,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
         <div class="ouractions-post image-zoom">
           <div class="image-zoom-wrapper">
             <img src="../movimentgrafitti-redesign/assets/images/changing-choosing.jpg" alt="">
@@ -145,7 +145,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" data-aos="fade-up" data-aos-delay="150">
         <div class="ouractions-post image-zoom">
           <div class="image-zoom-wrapper">
             <img src="./assets/images/riot-g3dfc08a90_1920.jpg" alt="">
@@ -155,7 +155,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" data-aos="fade-up" data-aos-delay="250">
         <div class="ouractions-post image-zoom">
           <div class="image-zoom-wrapper">
             <img src="./assets/images/gardening.jpg" alt="">
@@ -170,11 +170,11 @@
   </div>
 </section>
 
-  <!-- contact -->
+  <!-- contact js-->
   <section class="section-padding" id="contact">
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
           <div class="section-title">
             <h1 class="display-4 text-white fw-bold">Contact Us</h1>
             <div class="line bg-white"></div>
@@ -182,7 +182,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="250">
         <div class="col-lg-8">
           <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
             <div class="form-group col-lg-6">
@@ -211,17 +211,17 @@
     </div>
   </section>
 
- <!-- events -->
+ <!-- events js -->
  <section id="events" class="section-padding">
   <div class="container-fluid px-0">
     <div class="row">
-      <div class="col-12 text-center">
+      <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
         <div class="section-title">
           <h1 class="display-4 fw-bold">Events</h1>
           <div class="line"></div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit neque et dolorem expedita.</p>
           <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
+    <div class="carousel-inner" data-aos="fade-right" data-aos-delay="150">
       <div class="carousel-item active">
         <img src="./assets/images/volunteer-gcc5a6ace0_1920.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption justify-content-between align-items-center text-center">
@@ -263,11 +263,11 @@
 
 </section>
 
-<!-- testimonials this sections wasnt thought of but it makes sense to add to give a more familiar feel-->
+<!-- testimonials this sections wasnt thought of but it makes sense to add to give a more familiar feel js-->
 <section id="reviews" class="section-padding bg-light">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center">
+      <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
         <div class="section-title">
           <h1 class="display-4 fw-bold">Testimonials</h1>
           <div class="line"></div>
@@ -276,7 +276,7 @@
       </div>
     </div>
       <div class="row gy-4 g-4">
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
           <div class="review">
             <div class="review-head p-4 bg-white theme-shadow">
               <div class="text-warning">
@@ -297,7 +297,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
           <div class="review">
             <div class="review-head p-4 bg-white theme-shadow">
               <div class="text-warning">
@@ -318,7 +318,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
           <div class="review">
             <div class="review-head p-4 bg-white theme-shadow">
               <div class="text-warning">
@@ -339,7 +339,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
           <div class="review">
             <div class="review-head p-4 bg-white theme-shadow">
               <div class="text-warning">
@@ -360,7 +360,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
           <div class="review">
             <div class="review-head p-4 bg-white theme-shadow">
               <div class="text-warning">
@@ -381,7 +381,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
           <div class="review">
             <div class="review-head p-4 bg-white theme-shadow">
               <div class="text-warning">
@@ -406,16 +406,16 @@
   </div>
 </section>
 
-<!-- join us -->
-<section id="joinus" class="section-padding">
-  <div class="container align-items-top pt-lg-5 pb-lg-5">
+<!-- join us js-->
+<section id="joinus" class="section-padding joinus">
+  <div class="container">
     <div class="row">
-      <div class="col-lg-7 align-items-left">
-        <h2 style="font-size: 60px;">Join us!</h2>
+      <div class="col-lg-7 align-items-left" data-aos="fade-right" data-aos-delay="150">
+        <h2 class="display-4 fw-bold">Join us!</h2>
         <div class="line"></div>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, ut. Omnis nostrum, commodi cupiditate voluptatum fuga ratione! Et, pariatur rem?</h4>
       </div>
-      <div class="col-lg-4 align-items-center">
+      <div class="col-lg-4 align-items-center" data-aos="fade-up" data-aos-delay="150">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae ipsa pariatur quasi harum at eligendi odio, nesciunt dignissimos praesentium voluptatem provident aliquid tenetur sequi mollitia eveniet qui, quis numquam id ex corrupti. Quasi, distinctio. Minus asperiores officiis nesciunt similique laboriosam!</p>
         <button class="btn btn-imp">Join us</button>
       </div>
@@ -501,5 +501,8 @@
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
     </body>
 </html>
