--- a/ourmission.html
+++ b/ourmission.html
@@ -72,42 +72,128 @@
 </div>
 </section>
 
-<!-- text and image -->
-<section class="section-1 section-padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2>Our Mission</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="../movimentgrafitti-redesign/assets/images/OURACTIONS/PASSIONLEDUSHERE.jpg" class="img-fluid" alt="Image 1">
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section-2 section-padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <img src="../movimentgrafitti-redesign/assets/images/untitled folder/writing.jpg" class="img-fluid" alt="Image 2">
-      </div>
-      <div class="col-md-6">
-        <h2>Our Vision</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
 <!-- counter -->
+<section id="counter" class="section">
+  <div class="container counter section-padding">
+    <div class="row text-center">
+     <div class="col-12" data-aos="fade-down" data-aos-delay="50">
+       <div class="section-title">
+          <h1 class="display-4 fw-bold text-center">Our Reach</h1>
+          <div class="line"></div>
+        </div>
+      </div>
+     <div class="col-md-3" data-aos="fade-down" data-aos-delay="150">
+      <h2><span class="count">1161<span>+</h2>
+      <p class="text-uppercase mb-0 mt-3">Members</p>
+      </div>
+      <div class="col-md-3" data-aos="fade-down" data-aos-delay="250">
+      <h2><span class="count">49</span>+</h2>
+      <p class="text-uppercase mb-0 mt-3">Actions won</p>
+     </div>
+     <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
+      <h2><span class="count">40K</span>+</h2>
+       <p class="text-uppercase mb-0 mt-3">Euros Crowdfunded</p>
+     </div>
+      <div class="col-md-3" data-aos="fade-down" data-aos-delay="450">
+      <h2><span class="count">7</span></h2>
+      <p class="text-uppercase mb-0 mt-3">Sponsorships</p>
+      </div>
+    </div>
+  </div>
+</section>
 
+<!-- text and image -->
+<section class="section-1">
+  <div class="container">
+    <div class="row justify-content-between align-items-center">
+      <div class="col-md-6">
+        <h2 class="display-3 fw-bold">Our Mission</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="../movimentgrafitti-redesign/assets/images/ourmission/PASSIONLEDUSHERE.jpg" class="img-fluid" alt="">
+      </div>
+    </div>
+  </div>
+</section>
 
+<section class="section-2">
+  <div class="container">
+    <div class="row justify-content-between align-items-center">
+      <div class="col-md-6">
+        <img src="../movimentgrafitti-redesign/assets/images/untitledfolder/writing.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-md-6">
+        <h2 class="display-3 fw-bold">Our Vision</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
+<!-- teammember -->
+<section id="team" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
+        <div class="section-title">
+          <h1 class="display-4 fw-bold">Team Members</h1>
+          <div class="line"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit neque et dolorem expedita.</p>
+        </div>
+      </div>
+      <div class="row g-4 text-center">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="150">
+          <div class="team-member image-zoom">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/ourmission/team1.jpg" alt="">
+
+            </div>
+            <div class="team-member-content">
+              <h3>Jane Backett</h3>
+              <p class="mb-0">Founder and CEO</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="250">
+          <div class="team-member image-zoom">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/ourmission/team1.jpg" alt="">
+
+            </div>
+            <div class="team-member-content">
+              <h3>Jane Backett</h3>
+              <p class="mb-0">Founder and CEO</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="350">
+          <div class="team-member image-zoom">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/ourmission/team1.jpg" alt="">
+
+            </div>
+            <div class="team-member-content">
+              <h3>Jane Backett</h3>
+              <p class="mb-0">Founder and CEO</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+
+    
+  </div>
+</section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/counterup/1.0.0/jquery.counterup.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
