removed filter code in js as it had an error
filter for article posts to be redone

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
         <div class="ouractions-post image-zoom">
           <div class="image-zoom-wrapper">
-            <img src="../movimentgrafitti-redesign/assets/images/changing-choosing.jpg" alt="">
+            <img src="../movimentgrafitti-redesign/assets/images/ouractions/changing-choosing.jpg" alt="">
             <h5 class="mt-4">Lorem ipsum dolor sit.</h5>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam in rerum quasi voluptate. Itaque, harum?</p>
             <a href="#">Read More</a>
@@ -450,8 +450,9 @@
                 <a href=""><i class="ri-linkedin-fill"></i></a>
               </div>
           </div>
-
-          <div class="col-lg-3 col-sm-6">
+        </div>
+        <div class="row">
+          <div class="col-3">
             <h5 class="mb-0 text-white fw-bold">REPORTS</h5>
             <div class="line"></div>
             <ul>
@@ -462,8 +463,7 @@
               <li><a href="#">Annual Report</a></li>
             </ul>
             </div>
-
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-3">
             <h5 class="mb-0 text-white fw-bold">CONTACT</h5>
             <div class="line"></div>
             <ul>
@@ -472,8 +472,7 @@
               <li>Address: 20, Triq il-Liberta, Malta</li>
             </div>
           </div>
-
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-3">
           <form class="mb-0 text-white">
             <div>
               <h4>Subsribe to our newsletter!</h4>
@@ -481,15 +480,11 @@
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-            <button type="submit" class="btn btn-imp">Subscribe</button>
+              <button type="submit" class="btn btn-imp">Subscribe</button>
           </form>
             </div>
-          
-
-        </div>
-
+          </div>
       </div>
-
     </div>
     <div class="footer-bottom">
       <div class="container">
