--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,49 @@
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-
+<!-- navbar -->
+  
 <!-- content -->
+  <!-- contact js-->
+  <section class="section-padding" id="contactpage">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
+          <div class="section-title">
+            <h1 class="display-4 text-white fw-bold">Contact Us</h1>
+            <div class="line bg-white"></div>
+            <p class="text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque est molestiae quos veritatis cum qui.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="250">
+        <div class="col-lg-8">
+          <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+            <div class="form-group col-lg-6">
+              <input type="text" class="form-control" placeholder="Enter first name">
+            </div>
+            <div class="form-group col-lg-6">
+              <input type="text" class="form-control" placeholder="Enter second name">
+            </div>
+            <div class="form-group col-lg-12">
+              <input type="email" class="form-control" placeholder="Enter e-mail address">
+            </div>
+            <div class="form-group col-lg-12">
+              <input type="text" class="form-control" placeholder="Enter subject">
+            </div>
+            <div class="form-group col-lg-12">
+              <textarea name="message" id="" cols="" rows="5" class="form-control" placeholder="Enter message"></textarea>
+            </div>
+            <div class="form-group col-lg-12 d-grid">
+             <button class="btn btn-imp">Send Message</button>
+            </div>
+          </form>
 
+        </div>
+
+      </div>
+    </div>
+  </section>
 
 
 
