--- a/index.html
+++ b/index.html
@@ -42,18 +42,21 @@
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <!-- dark mdoe -->
-            <div class="style-switcher-item">
-              <div class="form-check form-switch">
-                <input class="form-check-input js-dark-mode" type="checkbox" role="switch" id="dark-mode">
-                <label class="form-check-label" for="dark-mode"></label>
-              </div>
+            <a href="./donate.html" class=" btn btn-imp ms-lg-3">Donate</a>
+          </li>
+          <li class="nav-item">
+            <div class="list list-right">
+              <button class="btn place-items-center" id="theme-toggle-btn">
+                <i class="ri-sun-fill sun-icon"></i>
+                <i class="ri-moon-fill moon-icon"></i>
+              </button>
             </div>
           </li>
         </ul>
-        <a href="./donate.html" class=" btn btn-imp ms-lg-3">Donate</a>
+        
       </div>
     </div>
+      
   </nav>
 
   <!-- hero js -->
@@ -443,17 +446,11 @@
             <a href="#"><img src="../movimentgrafitti-redesign/assets/images/logo-light.png" alt="" style="width: 120px;"></a>
             <div class="line"></div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet incidunt ipsum laudantium blanditiis, veniam voluptas.</p>
-              <div class="social-icons">
-                <a href=""><i class="ri-twitter-fill"></i></a>
-                <a href=""><i class="ri-facebook-fill"></i></a>
-                <a href=""><i class="ri-instagram-fill"></i></a>
-                <a href=""><i class="ri-linkedin-fill"></i></a>
-              </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-3">
-            <h5 class="mb-0 text-white fw-bold">REPORTS</h5>
+          <div class="col-lg-4">
+            <h5 class="text-white fw-bold">REPORTS</h5>
             <div class="line"></div>
             <ul>
               <li><a href="#">Terms and Conditions</a></li>
@@ -463,25 +460,27 @@
               <li><a href="#">Annual Report</a></li>
             </ul>
             </div>
-          <div class="col-3">
-            <h5 class="mb-0 text-white fw-bold">CONTACT</h5>
+          <div class="col-lg-4">
+            <h5 class="text-white fw-bold">CONTACT</h5>
             <div class="line"></div>
             <ul>
               <li>Email: info@movimentgraffitti.org</li>
               <li>Tel: +356 0000000</li>
               <li>Address: 20, Triq il-Liberta, Malta</li>
-            </div>
+            </ul>
           </div>
-            <div class="col-3">
-          <form class="mb-0 text-white">
+            <div class="col-lg-4">
+              <ul>
+          <form class="gy-4 text-white">
             <div>
               <h4>Subsribe to our newsletter!</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur autem quam pariatur officia esse non.</p>
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-              <button type="submit" class="btn btn-imp">Subscribe</button>
+              <button type="submit" class="btn btn-imp mt-4">Subscribe</button>
           </form>
+        </ul>
             </div>
           </div>
       </div>
@@ -491,6 +490,15 @@
         <div class="row g-4 justify-content-between">
           <div class="col-auto">
             <p class="mb-0">Copyright Moviment Graffitti. All Rights Reserved</p>
+          </div>
+          <div class="col-auto">
+            <div class="social-icons">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href=""><i class="ri-instagram-fill"></i></a>
+              <a href=""><i class="ri-linkedin-fill"></i></a>
+            </div>
+
           </div>
           <div class="col-auto">
             <p class="mb-0">Designed by <a href="#">Carla Polizzi</a></p>
