--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
           <li class="nav-item">
             <div class="list list-right">
-              <button class="btn place-items-center" id="theme-toggle-btn">
+              <button class="btn place-items-center ms-4" id="theme-toggle-btn">
                 <i class="ri-sun-fill sun-icon"></i>
                 <i class="ri-moon-fill moon-icon"></i>
               </button>
@@ -442,7 +442,7 @@
     <div class="footer-top">
       <div class="container">
         <div class="row gy-5">
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-auto">
             <a href="#"><img src="../movimentgrafitti-redesign/assets/images/logo-light.png" alt="" style="width: 120px;"></a>
             <div class="line"></div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet incidunt ipsum laudantium blanditiis, veniam voluptas.</p>
@@ -473,7 +473,8 @@
               <ul>
           <form class="gy-4 text-white">
             <div>
-              <h4>Subsribe to our newsletter!</h4>
+              <h4 class="fw-bold">SUBSCRIBE TO OUR NEWSLETTER!</h4>
+              <div class="line"></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur autem quam pariatur officia esse non.</p>
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -483,6 +484,15 @@
         </ul>
             </div>
           </div>
+          <div class="row">
+            <div class="col-auto">
+              <div class="social-icons">
+                <a href=""><i class="ri-twitter-fill"></i></a>
+                <a href=""><i class="ri-facebook-fill"></i></a>
+                <a href=""><i class="ri-instagram-fill"></i></a>
+                <a href=""><i class="ri-linkedin-fill"></i></a>
+              </div>
+          </div>
       </div>
     </div>
     <div class="footer-bottom">
@@ -491,13 +501,6 @@
           <div class="col-auto">
             <p class="mb-0">Copyright Moviment Graffitti. All Rights Reserved</p>
           </div>
-          <div class="col-auto">
-            <div class="social-icons">
-              <a href=""><i class="ri-twitter-fill"></i></a>
-              <a href=""><i class="ri-facebook-fill"></i></a>
-              <a href=""><i class="ri-instagram-fill"></i></a>
-              <a href=""><i class="ri-linkedin-fill"></i></a>
-            </div>
 
           </div>
           <div class="col-auto">
