OUR ACTIONS READY

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     </div>
   </section>
 
-  <!-- our actions js-->
-<section id="ouractions" class="section-padding">
+  <!-- OUR ACTIONS - MIGHT NOT USE-->
+<!-- <section id="ouractions" class="section-padding">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
@@ -179,7 +179,67 @@
 
     </div>
   </div>
-</section>
+</section> -->
+
+<!-- OUR ACTIONS NEW -->
+  <section class="featured-articles section-header-offset">
+
+    <div class="featured-articles-container container d-grid">
+
+      <div class="featured-content d-grid">
+
+        <div class="headline-banner">
+          <h3 class="headline fancy-border">
+            <span class="place-items-center">Lorem ipsum dolor sit amet.</span>
+          </h3>
+          <span class="headline-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, laborum?</span>
+        </div>
+        
+        <a href="..." class="article featured-article featured-article-1">
+          <img src="../movimentgrafitti-redesign/assets/images/ouractions/riot-g3dfc08a90_1920.jpg" alt="" class="article-image">
+         <span class="article-category">Category</span>
+         <div class="article-data-container">
+          <div class="article-data">
+            <span>May 7th, 20223</span>
+            <span class="article-data-spacer"></span>
+            <span>8 min read</span>
+          </div>
+          <h3 class="title acrticle-title">Lorem ipsum dolor sit amet.</h3>
+
+         </div>
+        </a>
+
+        <a href="..." class="article featured-article featured-article-2">
+          <img src="../movimentgrafitti-redesign/assets/images/ouractions/changing-choosing.jpg" alt="" class="article-image">
+         <span class="article-category">Category</span>
+         <div class="article-data-container">
+          <div class="article-data">
+            <span>May 7th, 20223</span>
+            <span class="article-data-spacer"></span>
+            <span>8 min read</span>
+          </div>
+          <h3 class="title acrticle-title">Lorem ipsum dolor sit amet.</h3>
+
+         </div>
+        </a>
+
+        <a href="..." class="article featured-article featured-article-3">
+          <img src="../movimentgrafitti-redesign/assets/images/ouractions/protest-g0ae852213_1920.jpg" alt="" class="article-image">
+         <span class="article-category">Category</span>
+         <div class="article-data-container">
+          <div class="article-data">
+            <span>May 7th, 20223</span>
+            <span class="article-data-spacer"></span>
+            <span>8 min read</span>
+          </div>
+          <h3 class="title acrticle-title">Lorem ipsum dolor sit amet.</h3>
+
+         </div>
+        </a>
+        
+      </div>
+    </div>
+  </section>
 
   <!-- contact js-->
   <section class="section-padding" id="contact">
