--- a/ourmission.html
+++ b/ourmission.html
@@ -52,8 +52,8 @@
 <section class="hero-section">
   <div class="hero-image"></div>
   <div class="hero-text">
-    <h1 data-aos="fade-left" class="text-white">OUR MISSION</h1>
-    <p data-aos="fade-right" class="text-white">We are dedicated to...</p>
+    <h1 class="text-white">OUR MISSION</h1>
+    <p class="text-white">We are dedicated to...</p>
   </div>
 </section>
 
@@ -63,9 +63,9 @@
   <div class="row">
     <div class="col-12">
       <div class="section-title">
-        <h1 class="display-4 fw-bold text-center" data-aos="fade-down" data-aos-delay="150">About us</h1>
+        <h1 class="display-4 fw-bold text-center">About us</h1>
         <div class="line"></div>
-        <h5 class="text-center" data-aos="fade-up" data-aos-delay="150">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum asperiores omnis ex deserunt sequi provident non tempora blanditiis doloribus dolorum corporis ipsam excepturi possimus, enim numquam!</h5>
+        <h5 class="text-center" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum asperiores omnis ex deserunt sequi provident non tempora blanditiis doloribus dolorum corporis ipsam excepturi possimus, enim numquam!</h5>
       </div>
     </div>
   </div>
@@ -77,10 +77,10 @@
   <div class="container">
     <div class="row justify-content-between align-items-center">
       <div class="col-md-6">
-        <h2 data-aos="fade-left" data-aos-delay="150"class="display-3 fw-bold">Our Mission</h2>
-        <p data-aos="fade-left" data-aos-delay="200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
+        <h2 class="display-3 fw-bold">Our Mission</h2>
+        <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
       </div>
-      <div class="col-md-6" data-aos="fade-left" data-aos-delay="150">
+      <div class="col-md-6" >
         <img src="../movimentgrafitti-redesign/assets/images/ourmission/PASSIONLEDUSHERE.jpg" class="img-fluid" alt="">
       </div>
     </div>
@@ -91,11 +91,11 @@
   <div class="container">
     <div class="row justify-content-between align-items-center">
       <div class="col-md-6">
-        <img data-aos="fade-right" data-aos-delay="150" src="../movimentgrafitti-redesign/assets/images/untitledfolder/writing.jpg" class="img-fluid" alt="">
+        <img src="../movimentgrafitti-redesign/assets/images/untitledfolder/writing.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-md-6">
-        <h2 data-aos="fade-right" data-aos-delay="150" class="display-3 fw-bold">Our Vision</h2>
-        <p data-aos="fade-right" data-aos-delay="200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
+        <h2 class="display-3 fw-bold">Our Vision</h2>
+        <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis urna at ex tristique bibendum. Donec ac lorem purus. Quisque venenatis posuere urna, quis aliquam ante bibendum at. Ut ut ex sit amet urna commodo vestibulum nec id mi. Proin id volutpat augue. Nulla facilisi. Sed tincidunt orci sit amet risus commodo malesuada. Etiam vitae aliquet sapien.</p>
       </div>
     </div>
   </div>
@@ -105,9 +105,9 @@
 <section id="counter" class="section">
   <div class="container counter section-padding">
     <div class="row text-center">
-     <div class="col-12" data-aos="fade-down" data-aos-delay="50">
+     <div class="col-12">
        <div class="section-title">
-          <h1 class="display-4 fw-bold text-center" data-aos="fade-down" data-aos-delay="150">Our Reach</h1>
+          <h1 class="display-4 fw-bold text-center">Our Reach</h1>
           <div class="line"></div>
         </div>
       </div>
@@ -137,7 +137,7 @@
 <section id="team" class="section-padding">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
+      <div class="col-12 text-center">
         <div class="section-title">
           <h1 class="display-4 fw-bold">Team Members</h1>
           <div class="line"></div>
