ADDED JOIN US PAGE

--- a/donate.html
+++ b/donate.html
@@ -63,7 +63,7 @@
 <section class="hero-section-donation">
   <div class="hero-image-donation"></div>
   <div class="hero-text-donation">
-    <h1 data-aos="fade-left" class="text-white">HELP US FIGHT BATTLES</h1>
+    <h1 data-aos="fade-left" class="text-white display-2 fw-bold">HELP US FIGHT BATTLES</h1>
     <p data-aos="fade-right" class="text-white">Donate.</p>
   </div>
 </section>
