--- a/joinus.html
+++ b/joinus.html
@@ -59,10 +59,41 @@
       
   </nav>
 
-  <!-- hero section js-->
+  <!-- HERO -->
+<section class="hero-section-2">
+  <div class="hero-image-2"></div>
+  <div class="hero-text-2">
+    <h1 data-aos="fade-left" class="text-white">JOIN US</h1>
+    <p data-aos="fade-right" class="text-white">We are dedicated to...</p>
+  </div>
+</section>
 
 
-  
+  <!-- WAYS TO GET INVOLVED -->
+  <section class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">VOLUNTEER</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet error repellat placeat asperiores hic dolorem aspernatur quidem quaerat reiciendis accusantium magnam facere dolore esse nihil, numquam corrupti exercitationem, quisquam consectetur.</p>
+              <a href="#" class="btn btn-dark">APPLICATION</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">PARTNERSHIPS & SPONSORSHIPS</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quo officia! Quaerat quibusdam ut excepturi iusto dolorem esse recusandae repellat! Deserunt suscipit libero placeat inventore. Praesentium delectus quia deserunt architecto.</p>
+              <a href="./contact.html" class="btn btn-dark">CONTACT</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
  
    
   
