--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
   <!-- contact js-->
  <section>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center section-padding">
     <div class="col-12 text-center">
       <div class="section-title">
         <h1 class="display-4 fw-bold">Get in touch</h1>
@@ -78,7 +78,13 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laborum molestias quia sequi, suscipit quae accusamus exercitationem quam accusantium inventore repellendus?</p>
       </div>
     </div>
-    <div class="col-lg-8">
+    <!-- map -->
+      <div class="col-lg-5 g-3 p-lg-5 p-4">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.097053238261!2d14.505708910296494!3d35.89563861805333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130e5ad2b3430359%3A0x83a545b34c3c2d76!2sTriton%20Fountain!5e0!3m2!1sen!2smt!4v1683793265830!5m2!1sen!2smt"
+        class="h-100 w-100 theme-shadow" style="border:0;" allowfullscreen="" loading="lazy" frameborder="0"></iframe>
+      </div>
+    
+    <div class="col-lg-7">
       <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
         <div class="form-group col-lg-12">
           <label for="name">First Name</label>
@@ -101,7 +107,7 @@
           <textarea name="message" id="" cols="" rows="5" class="form-control" placeholder="Enter message"></textarea>
         </div>
         <div class="form-group col-lg-12 d-grid">
-         <button class="btn btn-imp">Send Message</button>
+         <button type="submit" class="btn btn-imp">Send Message</button>
         </div>
       </form>
 
@@ -109,22 +115,22 @@
 
   </div>
  </section>
-<!-- further details -->
+
+ <!-- further details -->
  <section>
-  <div class="container background-color-img pt-lg-5 p-lg-5">
-    <div class="row ">
-      <div class="col-lg-6 ">
-        <h2 class="text-white fw-bold">Further Details</h2>
+  <div class="container background-color-img pt-lg-5 p-lg-5 justify-content-center section-padding">
+    <div class="col-12 text-center">
+      <div class="section-title">
+        <h1 class="display-4 fw-bold text-white">Further Details</h1>
         <div class="line"></div>
+        <ul class="text-white">
+          <li >Email: info@movimentgraffitti.org</li>
+          <li>Tel: +356 0000000</li>
+          <li>Address: 20, Triq il-Liberta, Malta</li>
+        </ul>      
+      </div>
     </div>
-    <div>
-      <ul class="text-white">
-        <li>Email: info@movimentgraffitti.org</li>
-        <li>Tel: +356 0000000</li>
-        <li>Address: 20, Triq il-Liberta, Malta</li>
-      </ul>
-    </div>
-  </div>
+    
  </section>
 
  <!-- footer -->
