ACTION TEMPLATE FIXED

--- a/events.html
+++ b/events.html
@@ -114,15 +114,15 @@
 </section>
 
 <!-- filters -->
-<section class="p-lg-3 bg-dark">
+<section class="p-lg-3 ps-4 pe-4 bg-dark">
   <div id="filters" class="">
-    <button class="btn btn-filter">Show All</button>
-    <button class="btn btn-filter">Environment</button>
-    <button class="btn btn-filter">Gender</button>
-    <button class="btn btn-filter">Public Safety</button>
-    <button class="btn btn-filter">Other</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Show All</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Environment</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Gender</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Public Safety</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Other</button>
   </div>
-  </section>
+</section>
     <!-- post -->
     <section id="newspost" class="section-padding">
       <div class="container">
