--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
         <h1>Current news subtitle.</h1>
         <div class="line-left"></div></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id molestiae, eum delectus officiis fugit maxime sapiente assumenda asperiores! Aliquid quasi, vitae minima veritatis nemo ex repudiandae sapiente? Neque ipsa voluptatum saepe odit?</p>
-        <button class="btn btn-imp mt-4">DONATE</button>
+        <button class="btn btn-imp mt-4">READ MORE</button>
 
       </div>
     </div>
@@ -87,14 +87,14 @@
 
 
 <!-- filters -->
-<section class="p-lg-3 bg-dark">
-<div id="filters" class="">
-  <button class="btn btn-filter">Show All</button>
-  <button class="btn btn-filter">Environment</button>
-  <button class="btn btn-filter">Gender</button>
-  <button class="btn btn-filter">Public Safety</button>
-  <button class="btn btn-filter">Other</button>
-</div>
+<section class="p-lg-3 ps-4 pe-4 bg-dark">
+  <div id="filters" class="">
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Show All</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Environment</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Gender</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Public Safety</button>
+    <button class="btn btn-dark btn-filter mt-2 mb-2">Other</button>
+  </div>
 </section>
   <!-- post -->
   <section id="newspost" class="section-padding">
