--- a/donate.html
+++ b/donate.html
@@ -77,7 +77,7 @@
           <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
             <div class="form-group col-lg-12">
               <label for="Action">What would you like to donate to?</label>
-              <select class="form-select form-select mb-3" aria-label=".form-select-lg example">
+              <select class="form-select form-select mb-3" aria-label=".form-select-lg">
                 <option selected disabled>Select action</option>
                 <option>Action1</option>
                 <option>Action2</option>
@@ -111,7 +111,7 @@
               <input type="text" id="cvv" name="cvv" class="form-control" placeholder="Enter CVV" required>
             </div>
             <div class="form-group col-lg-12 d-grid">
-             <button class="btn btn-imp">Send Message</button>
+             <button class="btn btn-imp">DONATE</button>
             </div>
           </form>
 
