--- a/joinus.html
+++ b/joinus.html
@@ -70,7 +70,7 @@
 
 
   <!-- WAYS TO GET INVOLVED -->
-  <section class="p-lg-5 section-padding">
+  <section class="p-lg-5 pt-5 section-padding">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
