added news template

--- a/news.html
+++ b/news.html
@@ -108,7 +108,7 @@
                         <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                         <h5>Title description, May 7, 2023</h5>
                         <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="#">Read More</a>
+                        <a href="../movimentgrafitti-redesign/news1.html">Read More</a>
                     </div>
                     <div class="col-sm-6 text-right">
                         <img class="" src="../movimentgrafitti-redesign/assets/images/news/fireworks-ge40eac415_1920.jpg" alt="" width="500px">
@@ -125,7 +125,7 @@
                       <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                       <h5>Title description, May 7, 2023</h5>
                       <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                      <a href="#">Read More</a>
+                      <a href="../movimentgrafitti-redesign/news2.html">Read More</a>
                   </div>
                   <div class="col-sm-6 text-right">
                       <img class="" src="../movimentgrafitti-redesign/assets/images/news/headway-F2KRf_QfCqw-unsplash.jpg" alt="" width="500px">
@@ -144,7 +144,7 @@
                         <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                         <h5>Title description, May 7, 2023</h5>
                         <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="#">Read More</a>
+                        <a href="../movimentgrafitti-redesign/news3.html">Read More</a>
                     </div>
                     <div class="col-sm-6 text-right">
                         <img class="" src="../movimentgrafitti-redesign/assets/images/news/kane-reinholdtsen-LETdkk7wHQk-unsplash.jpg" alt="" width="500px">
@@ -161,7 +161,7 @@
                       <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                       <h5>Title description, May 7, 2023</h5>
                       <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                      <a href="#">Read More</a>
+                      <a href="../movimentgrafitti-redesign/news4.html">Read More</a>
                   </div>
                   <div class="col-sm-6 text-right">
                       <img class="" src="../movimentgrafitti-redesign/assets/images/news/lora-ohanessian-16rIhtV42yA-unsplash.jpg" alt="" width="500px">
